--- a/flutter-hms-health/android/src/main/AndroidManifest.xml
+++ b/flutter-hms-health/android/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-        <service android:name="com.huawei.hms.flutter.health.modules.autorecorder.service.AutoRecorderBackgroundService">
+        <service android:exported="true" android:name="com.huawei.hms.flutter.health.modules.autorecorder.service.AutoRecorderBackgroundService">
             <intent-filter android:priority="1000">
                 <action android:name="HealthKitService" />
             </intent-filter>
